# repomgr

./: .pre-commit-config.yaml  AGENTS.md  README.md  mkdocs.yml  nokeys.env  pyproject.toml  repos.toml.example  ruff.toml
.github/: copilot-instructions.md
.github/agents/: dev-implementation-agent.md  dev-prototype-agent.md  docs-agent.md  draft-to-plan.agent.md  meta-agent.md  test-agent.md
.github/prompts/: plan-staticFolRelocation.prompt.md
.github/workflows/: docs.yml
docs/: contributing.md  getting-started.md  index.md
docs/guides/: params_config.md  pre_commit.md  user-guide.md  webapp_setup.md
scratch_space/: plan.md
scratch_space/00_vibes/: 01-post-rename-cleanup.md
scratch_space/01_repomgr_sample/: 01_params.ipynb
scratch_space/02_feature_sample/: 01_sample.ipynb
scratch_space/03-package-begin/: 00-plan.md  01-track-status.md  02-repos-config.md  03-state.md  04-git.md  05-deps.md  06-health.md  07-renderer.md  08-manager.md  09-update.md  10-cli.md  11-github-auth.md
scratch_space/04-fixes/: 01-fixes.md  02-fixes.md  03-env-var-toml.md  04-log-levels.md  05-env-loading.md
scratch_space/05-config-owner-repo/: 00-start.md  01_schema.md  02_consumers.md  03_docs.md  04_migrate.md  tracking.md
src/repomgr/: __init__.py  cli.py  deps.py  git.py  health.py  manager.py  renderer.py  state.py  update.py
tests/: __init__.py  conftest.py  test_cli.py  test_deps.py  test_git.py  test_health.py  test_manager.py  test_renderer.py  test_state.py  test_update.py
tests/config/: test_env_vars.py  test_repos_config.py  test_sample_config.py
(+13 files in other folders)
