[project]
name = "repomgr"
version = "0.1.0"
description = "Local CLI tool for managing a fleet of Python repos on a single Linux box"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "rich>=13.9.4",
    "typer>=0.15",
]

[project.scripts]
repomgr = "repomgr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repomgr"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "notebook" },
    { include-group = "test" },
]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "ruff>=0.9.6",
    "pyright[nodejs]>=1.1.407",
    "pre-commit>=4.1.0",
    "detect-secrets>=1.5.0",
]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "nbstripout>=0.8.2",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-api-autonav>=0.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# remember to adjust include paths as needed (eg scripts folder)
include = ["src", "tests"]
